--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ibai</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="icon" href="ruta-de-la-imagen.ico" type="image/x-icon">
 </head>
 <body>
     <h1>TOCA LA FOTO DE IBAI NEGRO 100 VECES PARA DARLE DERECHOS</h1>
